--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -5,7 +5,7 @@ tasks:
     task: generate
     desc: Generate Go code from protobuf
     cmds:
-      - protoc -I proto proto/sso/*.proto --go_out=./gen/go/ --go_opt=paths=source_relative --go-grpc_out=./gen/go/
+      - protoc -I proto proto/sso/*.proto --go_out=./gen/go/ --go_opt=paths=source_relative --go-grpc_opt=paths=source_relative --go-grpc_out=./gen/go/
 
 # ./Taskfile.yaml
 # See: https://taskfile.dev/api/
